[package]
name = "mpct"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A single-binary multi-purpose command-line toolkit."

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.5"
chacha20poly1305 = "0.10.1"
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6.5"
data-encoding = "2.11.0"
dirs = "6.0.0"
heck = "0.5.0"
hex = "0.4.3"
hickory-resolver = "0.26.1"
hmac = "0.13.0"
image = "0.25.10"
lipsum = "0.9.1"
md-5 = "0.11.0"
nanoid = "0.5.0"
percent-encoding = "2.3.2"
qrcode = "0.14.1"
rand = "0.10.1"
regex = "1.12.4"
rpassword = "7.5.4"
rqrr = "0.10.1"
rustls = "0.23.40"
rustls-native-certs = "0.8.4"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
similar = "3.1.1"
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "time", "net"] }
toml = "1.1.2"
totp-rs = "5.7.1"
ulid = "1.2.1"
ureq = "3.3.0"
uuid = { version = "1.23.3", features = ["v4", "v7"] }
x509-parser = "0.18.1"
zxcvbn = "3.1.1"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
